# visual-asset-pipeline

./: .gitignore  LICENSE  README.ko.md  README.md  package.json  pyproject.toml
docs/: architecture.md  library-recommendations.md  name-candidates.md  process.ko.md
docs/i18n/: README.en.md  README.es.md  README.ja.md  README.zh-CN.md
scripts/: generate_readme_assets.py  npm-postinstall.js  run_icon_pipeline.py
skill/icon-asset-pipeline/: SKILL.md
skill/icon-asset-pipeline/agents/: openai.yaml
skill/icon-asset-pipeline/references/: architecture.md
skill/icon-asset-pipeline/scripts/: requirements.txt  run_icon_pipeline.py
skill/icon-asset-pipeline/scripts/icon_asset_pipeline/: __init__.py  analysis.py  cleanup.py  models.py  packaging.py  pipeline.py  segmentation.py
skill/icon-asset-pipeline/scripts/tests/: test_pipeline_smoke.py
skill/visual-asset-pipeline/: SKILL.md
skill/visual-asset-pipeline/agents/: openai.yaml
skill/visual-asset-pipeline/references/: architecture.md  library-recommendations.md
skill/visual-asset-pipeline/scripts/: run_visual_pipeline.py
skill/visual-asset-pipeline/scripts/tests/: test_pipeline_smoke.py
skill/visual-asset-pipeline/scripts/visual_asset_pipeline/: analysis.py  cleanup.py  detection.py  models.py  packaging.py  pipeline.py
src/icon_asset_pipeline/: cli.py  detection.py  generation.py  naming.py  normalization.py  validation.py
src/visual_asset_pipeline/: __init__.py  cli.py  generation.py  models.py  naming.py  normalization.py  packaging.py  validation.py
